making ui cleaner

--- a/bitcoin_pages/templates/bitcoin_pages/index.html
+++ b/bitcoin_pages/templates/bitcoin_pages/index.html
@@ -182,7 +182,7 @@
 								<h5>Cryptocurrency Trading</h5>
 							</div>
 							<div class="single-about-dec">
-								<p>Bank on Bitfonix’s experience as a global fintech leade</p>
+								<p>Bank on Bitfonix’s experience as a global fintech leader.</p>
 							</div>
 						</div>
 					</div>
@@ -334,7 +334,6 @@
 			<div class="row">
 				<div class="col-12 text-center">
 					<div class="section-title">
-						<h5>Bitcoin Legality</h5>
 						<h3>Why Choose <span>Bitfonix</span></h3>
 					</div>
 				</div>
@@ -350,7 +349,7 @@
 								</div>
 								<div class="single-wcus-text">
 									<h5>Easy Trading</h5>
-									<p>Lorem ipsum dolor sit ametelid consectetur adipiscing elit sedd eiusmod tempor.</p>
+									<p>Our terminal is built on the best technology and lets you trade effortlessly any of the Bitfonix currency pair.</p>
 								</div>
 							</div>
 						</div>
@@ -362,7 +361,7 @@
 								</div>
 								<div class="single-wcus-text">
 									<h5>Trading Strategy</h5>
-									<p>Lorem ipsum dolor sit ametelid consectetur adipiscing elit sedd eiusmod tempor.</p>
+									<p>Connect with other traders, discuss trading strategies, and also copy their trading portfolio performance.</p>
 								</div>
 							</div>
 						</div>
@@ -374,7 +373,7 @@
 								</div>
 								<div class="single-wcus-text">
 									<h5>Money Exchange</h5>
-									<p>Lorem ipsum dolor sit ametelid consectetur adipiscing elit sedd eiusmod tempor.</p>
+									<p>Bitfonix offers order books with top tier liquidity, allowing users to easily exchange Bitcoin, and many other digital assets with minimal slippage</p>
 								</div>
 							</div>
 						</div>
@@ -385,8 +384,8 @@
 									<i class="icofont icofont-ui-travel"></i>
 								</div>
 								<div class="single-wcus-text">
-									<h5>Security Ensure</h5>
-									<p>Lorem ipsum dolor sit ametelid consectetur adipiscing elit sedd eiusmod tempor.</p>
+									<h5>Security Ensured</h5>
+									<p>Security of user information and funds is our first priority.</p>
 								</div>
 							</div>
 						</div>
@@ -398,8 +397,8 @@
 					<div class="single-wcus-promo">
 						<div class="single-wcus-promo-inner">
 							<h3>We are ready to fly with you.</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor.</p>
-							<a href="#" class="btn-style btn-border btn-border-2">Read More</a>
+							<p>Our vision is to increase the freedom of money globally. We believe that by spreading this freedom, we can significantly improve lives around the world.</p>
+							<a href="{% url 'fly' %}" class="btn-style btn-border btn-border-2">Read More</a>
 						</div>
 					</div>
 				</div>
@@ -408,50 +407,7 @@
         </div>
         <!--- END CONTAINER -->
     </section>
-    <!-- END CHOOSE US SECTION -->	
-	
-	<!-- START COUNTER SECTION -->
-    <section id="counter" class="section-padding overlay counter-section section-back-image-2" data-background="{% static 'assets/img/bg/counterbg.jpg' %}">
-        <div class="container">
-			<div class="row">	 
-				<div class="col-lg-6 col-md-6 col-12">	 
-					<div class="row text-center counter-wrapper">	 
-						<div class="col-lg-6 col-md-6 col-12 counter-wrapper-inner">
-							<div class="single-counter">
-								<h3 class="timer">56</h3>
-								<p>Bitcoin</p>
-							</div>							
-						</div>
-						<!-- end col -->	 
-						<div class="col-lg-6 col-md-6 col-12 counter-wrapper-inner">
-							<div class="single-counter">
-								<h3 class="timer">95</h3>
-								<p>Wallet</p>
-							</div>							
-						</div>
-						<!-- end col -->	 
-						<div class="col-lg-6 col-md-6 col-12 counter-wrapper-inner">
-							<div class="single-counter">
-								<h3 class="timer">85</h3>
-								<p>ATM</p>
-							</div>							
-						</div>
-						<!-- end col -->	 
-						<div class="col-lg-6 col-md-6 col-12 counter-wrapper-inner">
-							<div class="single-counter">
-								<h3 class="timer">68</h3>
-								<p>Client</p>
-							</div>							
-						</div>
-						<!-- end col -->
-					</div>
-				</div>
-				<!-- end col -->	
-			</div>
-        </div>
-        <!--- END CONTAINER -->
-    </section>
-    <!-- END PROMO SECTION -->	
+    <!-- END CHOOSE US SECTION -->		
 	
 	<!-- START SERVICE SECTION -->
     <section id="service" class="section-padding">
@@ -469,7 +425,7 @@
 				<div class="single-service-item mt-5">
 					<div class="single-service">
 						<div class="single-service-img">
-							<img class="img-fluid" src="{% static 'assets/img/service/1.jpg' %}" alt="">
+							<img class="img-fluid" src="{% static 'assets/img/service/2.jpg' %}" alt="">
 						</div>
 						<div class="single-service-title">
 							<div class="single-service-icon">
@@ -480,7 +436,7 @@
 							</div>
 						</div>
 						<div class="single-service-dec">
-							<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.</p>
+							<p>Bifonix has consistently taken measures to ensure its platform makes online trading and investing accessible to anyone.</p>
 						</div>	
 					</div>							
 				</div>
@@ -499,7 +455,7 @@
 							</div>
 						</div>
 						<div class="single-service-dec">
-							<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.</p>
+							<p>With Bitfonix, you can easily buy Bitcoin with cash, as well as other cryptocurrencies we offer on the platform.</p>
 						</div>	
 					</div>							
 				</div>
@@ -507,7 +463,7 @@
 				<div class="single-service-item mt-5">
 					<div class="single-service">
 						<div class="single-service-img">
-							<img class="img-fluid" src="{% static 'assets/img/service/2.jpg' %}" alt="">
+							<img class="img-fluid" src="{% static 'assets/img/service/1.jpg' %}" alt="">
 						</div>
 						<div class="single-service-title">
 							<div class="single-service-icon">
@@ -518,7 +474,7 @@
 							</div>
 						</div>
 						<div class="single-service-dec">
-							<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.</p>
+							<p>Bitcoin and Ethereum is an open source network, much more than just a digital currency. At Bitfonix, we not only trade your assets, we secure it as well.</p>
 						</div>	
 					</div>							
 				</div>
@@ -537,7 +493,7 @@
 							</div>
 						</div>
 						<div class="single-service-dec">
-							<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.</p>
+							<p>Bank on Bitfonix’s experience as a global fintech leader since the early days of Blockchain to provide you with a complete crypto trading solution.</p>
 						</div>	
 					</div>							
 				</div>
@@ -728,7 +684,7 @@
 			<div class="row">
 				<div class="col-12 text-center">
 					<div class="section-title">
-						<h5 class="text-white">How work</h5>
+						<h5 class="text-white">How we work</h5>
 						<h3 class="text-white">Work <span>Process</span></h3>
 					</div>
 				</div>
@@ -742,7 +698,7 @@
 						</div>
 						<div class="single-wprocess-text">
 							<h5>Trading Strategy</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+							<p>Bitfonix implements reliable strategies by providing our users with state-of-the-art trading tools, innovative technology and unparalleled levels of customer service.</p>
 						</div>
 					</div>
 				</div>
@@ -754,7 +710,7 @@
 						</div>
 						<div class="single-wprocess-text">
 							<h5>Group Planing</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+							<p>Never trade crypto alone. Bitfonix is much more than just a place to trade. Use award-winning social trading features to connect with over 10 million users worldwide.</p>
 						</div>
 					</div>
 				</div>
@@ -766,7 +722,7 @@
 						</div>
 						<div class="single-wprocess-text">
 							<h5>Final Success</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+							<p>We believe cryptocurrency is the future of money and that Building a robust and accessible cryptoeconomy will create a more equitable financial system around the world.</p>
 						</div>
 					</div>
 				</div>
@@ -848,96 +804,6 @@
     </section>
     <!-- END PROMO 2 SECTION -->
 	
-	<!-- START PRICE SECTION -->
-    <section id="price" class="section-padding bg-gray">
-        <div class="container">
-			<div class="row">
-				<div class="col-12 text-center">
-					<div class="section-title">
-						<h5>Bitfonix packages</h5>
-						<h3>Our <span>Pricing</span></h3>
-					</div>
-				</div>
-			</div>
-			<!-- end section title -->
-			<div class="row">
-				<div class="col-lg-4 col-md-4 col-12 mb-lg-0 mb-md-0 mb-5">
-					<div class="single-pricing">
-						<div class="single-pricing-head text-center">
-							<span class="price"><sup>$</sup><span class="price-digit">25</span>/mo</span>
-							<h5>Basic</h5>
-						</div>
-						<div class="single-pricing-body">
-							<div class="single-pricing-list">
-								<ul>
-									<li><i class="icofont icofont-check-alt"></i> 10 Projects</li>
-									<li><i class="icofont icofont-close-line"></i> 100 GB Disk</li>
-									<li><i class="icofont icofont-check-alt"></i> 10 Emails</li>
-									<li><i class="icofont icofont-check-alt"></i> Unlimited Bandwidth</li>
-									<li><i class="icofont icofont-close-line"></i> 1 Website</li>
-									<li><i class="icofont icofont-check-alt"></i> Free Support</li>
-								</ul>
-							</div>
-						</div>
-						<div class="single-pricing-button">
-							<a href="#" class="mt-3 d-block text-center rounded-0">Buy It Now</a>
-						</div>	
-					</div>
-				</div>
-				<!-- end col -->
-				<div class="col-lg-4 col-md-4 col-12 mb-lg-0 mb-md-0 mb-5">
-					<div class="single-pricing">
-						<div class="single-pricing-head text-center">
-							<span class="price"><sup>$</sup><span class="price-digit">45</span>/mo</span>
-							<h5>Standard</h5>
-						</div>
-						<div class="single-pricing-body">
-							<div class="single-pricing-list">
-								<ul>
-									<li><i class="icofont icofont-check-alt"></i> 20 Projects</li>
-									<li><i class="icofont icofont-check-alt"></i> 200 GB Disk</li>
-									<li><i class="icofont icofont-check-alt"></i> 20 Emails</li>
-									<li><i class="icofont icofont-check-alt"></i> Unlimited Bandwidth</li>
-									<li><i class="icofont icofont-close-line"></i>  Website</li>
-									<li><i class="icofont icofont-check-alt"></i> Free Support</li>
-								</ul>
-							</div>
-						</div>
-						<div class="single-pricing-button">
-							<a href="#" class="mt-3 d-block text-center rounded-0">Buy It Now</a>
-						</div>	
-					</div>
-				</div>
-				<!-- end col -->
-				<div class="col-lg-4 col-md-4 col-12">
-					<div class="single-pricing">
-						<div class="single-pricing-head text-center">
-							<span class="price"><sup>$</sup><span class="price-digit">55</span>/mo</span>
-							<h5>Premium</h5>
-						</div>
-						<div class="single-pricing-body">
-							<div class="single-pricing-list">
-								<ul>
-									<li><i class="icofont icofont-check-alt"></i> 30 Projects</li>
-									<li><i class="icofont icofont-check-alt"></i> 300 GB Disk</li>
-									<li><i class="icofont icofont-check-alt"></i> 30 Emails</li>
-									<li><i class="icofont icofont-check-alt"></i> Unlimited Bandwidth</li>
-									<li><i class="icofont icofont-check-alt"></i> 3 Website</li>
-									<li><i class="icofont icofont-check-alt"></i> Free Support</li>
-								</ul>
-							</div>
-						</div>
-						<div class="single-pricing-button">
-							<a href="#" class="mt-3 d-block text-center rounded-0">Buy It Now</a>
-						</div>	
-					</div>
-				</div>
-				<!-- end col -->
-			</div>
-        </div>
-        <!--- END CONTAINER -->
-    </section>
-    <!-- END PRICE SECTION -->
 	
 	<!-- START TESTIMONIAL SECTION -->
     <section id="testimonial" class="section-padding">
@@ -957,25 +823,37 @@
 						<div class="testimonial-slider owl-carousel owl-theme">
 							<div class="single-testimonial">
 								<div class="single-testimonial-image">
-									<img class="img-fluid rounded-circle" src="{% static 'assets/img/team/person1.jpg' %}" alt="">
+									<img class="img-fluid rounded-circle" src="{% static 'assets/img/clients/13.jpg' %}" alt="">
 								</div>
 								<div class="single-testimonial-content">
-									<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illodrut inventore veritatis et quasi architecto beatae vitae dicta sunt. </p>
+									<p>Its been a pleasure trading with Bitfonix. Great platform for starting traders. Great selsection and transparent fee system.</p>
 								</div>
 								<div class="single-testimonial-meta">
-									<p>- Jone Doe</p>
+									<p>- Yvelmkens fjord</p>
 								</div>
 							</div>
 							<!-- end single testimonial -->
 							<div class="single-testimonial">
 								<div class="single-testimonial-image">
-									<img class="img-fluid rounded-circle" src="{% static 'assets/img/team/person2.jpg' %}" alt="">
+									<img class="img-fluid rounded-circle" src="{% static 'assets/img/clients/12.jpg' %}" alt="">
 								</div>
 								<div class="single-testimonial-content">
-									<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illodrut inventore veritatis et quasi architecto beatae vitae dicta sunt. </p>
+									<p> So easy and fun as i ahvent had to do much. Bitfonix has been making my trading experience enjoyable and secure. </p>
 								</div>
 								<div class="single-testimonial-meta">
-									<p>- Hash Theme</p>
+									<p>- Mcleroy rhithers</p>
+								</div>
+							</div>
+							<!-- end single testimonial -->
+							<div class="single-testimonial">
+								<div class="single-testimonial-image">
+									<img class="img-fluid rounded-circle" src="{% static 'assets/img/clients/11.jpg' %}" alt="">
+								</div>
+								<div class="single-testimonial-content">
+									<p>Bitfonix is a fantastic trading platform, both from an ease of use and technical perspective. I'm very satisfied with the service they Bitfonix provide. keep it up.</p>
+								</div>
+								<div class="single-testimonial-meta">
+									<p>- Aleixy shalom</p>
 								</div>
 							</div>
 							<!-- end single testimonial -->
