--- a/bitcoin_pages/templates/bitcoin_pages/services.html
+++ b/bitcoin_pages/templates/bitcoin_pages/services.html
@@ -53,7 +53,7 @@
 								</div>
 							</div>
 							<div class="single-service-dec">
-								<p>Bifonix has consistently taken measures to ensure its platform makes online trading and investing accessible to anyone
+								<p>Bifonix has consistently taken measures to ensure its platform makes online trading and investing accessible to anyone.
 									<a href="{% url 'bitcoin_trading' %}">[...]</a>
 								</p>
 							</div>	
