--- a/dashboard/templates/base_dash.html
+++ b/dashboard/templates/base_dash.html
@@ -288,7 +288,8 @@
 	  
 	<!-- jQuery 3 -->
   <script src="{% static 'dashboard/assets/vendor_components/jquery/dist/jquery.js' %}"></script>
-  <script src="{% static 'dashboard/assets/vendor_components/jquery/dist/hidefield.js' %}"></script>
+  <script src="{% static 'dashboard/js/hidefield.js' %}"></script>
+  <script src="{% static 'dashboard/js/jquery-3.5.1.min.js' %}"></script>
 	<script src="{% static 'dashboard/assets/vendor_components/popper/dist/popper.min.js' %}"></script>
 	<script src="{% static 'dashboard/assets/vendor_components/bootstrap/dist/js/bootstrap.js' %}"></script>	
 	<script src="{% static 'dashboard/assets/vendor_components/jquery-slimscroll/jquery.slimscroll.js' %}"></script>
