--- a/templates/500.html
+++ b/templates/500.html
@@ -33,12 +33,6 @@
 </head>
 
 <body>
-
-	<!-- START PRELOADER -->
-	<div id="page-preloader">
-		<div class="theme-loader">No Name</div>
-	</div>
-	<!-- END PRELOADER --> 
 	
 	<!-- START HEADER SECTION -->
 	<header class="main-header header-1">
@@ -146,7 +140,7 @@
 			<div class="row text-center">
 				<div class="col-lg-8 col-md-8 col-8 mx-auto">
 					<div class="error-page-wrap">
-					    <h3>5<i class="icofont icofont-optic"></i><i class="icofont icofont-optic"></i></h3>
+					    <h3>5<i class="icofont icofont-optic"></i></h3>
 						<h4>Internal server error</h4>
 						<p>Something went wrong on the server. We are working on it at light speed.</p>
 						<a href="{% url 'index' %}" class="btn-style btn-filled btn-filled-2"><i class="icofont icofont-ui-home"></i>Back to home</a>
