--- a/dashboard/templates/base_dash.html
+++ b/dashboard/templates/base_dash.html
@@ -249,7 +249,7 @@
           </a>
           <ul class="treeview-menu">
             <li><a href="{% url 'inbox' %}">Inbox</a></li>
-            <li><a href="{% url 'compose' %}">Compose</a></li>
+            <!-- <li><a href="{% url 'compose' %}">Compose</a></li> -->
           </ul>
         </li>
         <li class="treeview">
