--- a/dashboard/templates/dashboard/inbox.html
+++ b/dashboard/templates/dashboard/inbox.html
@@ -65,9 +65,9 @@
             	<div class="table-responsive">
 					<table class="table table-hover table-striped">
 					  <tbody>
-            {% if messages %}
+            {% if messagess %}
             
-            {% for message in messages %}
+            {% for message in messagess %}
             <tr>
               <td><input type="checkbox"></td>
               <td class="mailbox-star"><a href="#"><i class="fa fa-star text-yellow"></i></a></td>
